Revert "Revert "Fix banner container to only have mobile fix on mobile screens""
This reverts commit ff7e70bf977e5927e7dc2ebe73f4a63f1b040bbc.

--- a/app/assets/stylesheets/general/banner_title.css.scss
+++ b/app/assets/stylesheets/general/banner_title.css.scss
@@ -5,7 +5,6 @@
   opacity: 0.8;
   position: relative;
 
-
   .overlay {
     position:absolute;
     top:0;
@@ -19,6 +18,10 @@
   }
 
   @media(max-width:767px) {
+    .container.banner-container {
+      margin-right: 20px;
+    }
+
     .title {
       top: 50px;
       font-size: 24px;
